chore: v1.0.4 - 更新版本与优化用户反馈体验
主要改动:
- 更新 package.json 版本至 1.0.4
- 增强 WebView 提交按钮的布局，新增切换快捷键模式按钮
- 优化反馈提交逻辑，支持快捷键模式切换与输入法兼容
- 更新 README，增加一键安装 MCP Server 的说明
- 改进超时处理机制，增加自动重试选项

--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -53,8 +53,11 @@
         <div id="timeoutInfo" class="timeout-info"></div>
       </div>
       
-      <!-- 提交按钮 -->
-      <button id="submitBtn" class="submit-btn">提交反馈 (Ctrl+Enter)</button>
+      <!-- 提交按钮组 -->
+      <div class="submit-group">
+        <button id="submitBtn" class="submit-btn">提交反馈 (Ctrl+Enter)</button>
+        <button id="toggleKeyModeBtn" class="toggle-key-mode-btn" title="切换快捷键模式">⌨️</button>
+      </div>
     </div>
   </div>
   
